# SearchDeadCode

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DETECTORS.md  OUTPUT_IMPROVEMENT_PLAN.md  README.md  SECURITY.md  action.yml  demo.tape
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
assets/: demo.gif.md
benches/: parsing_bench.rs
docs/: README.ja.md  README.ko.md  README.zh-CN.md  SOCIAL_PREVIEW.md  architecture.md  ci-integration.md  cli-reference.md  configuration.md  detectors.md  hybrid-analysis.md  research.md  roadmap.md  troubleshooting.md
scripts/: pre-commit-hook.sh
src/: lib.rs  main.rs
src/analysis/: cycles.rs  deep.rs  enhanced.rs  entry_points.rs  hybrid.rs  mod.rs  reachability.rs  resources.rs
src/analysis/detectors/: assign_only.rs  asynctask_usage.rs  business_logic_composable.rs  collection_without_sequence.rs  complex_condition.rs  dead_branch.rs  deep_inheritance.rs  duplicate_import.rs  eventbus_pattern.rs  global_mutable_state.rs  globalscope_usage.rs  hardcoded_dispatcher.rs  heavy_viewmodel.rs  ignored_return.rs  init_ondraw.rs  large_class.rs  lateinit_abuse.rs  launchedeffect_without_key.rs  long_method.rs  long_parameter_list.rs  main_thread_database.rs  memory_leak_risk.rs  missing_usecase.rs  mod.rs  mutable_state_exposed.rs  navcontroller_passing.rs  nested_callback.rs  nullability_overload.rs  object_allocation_loop.rs  (+24 more)
src/baseline/: mod.rs
src/cache/: mod.rs
src/config/: loader.rs
src/coverage/: jacoco.rs  kover.rs  lcov.rs  mod.rs
src/discovery/: file_finder.rs  mod.rs
src/graph/: builder.rs  declaration.rs  mod.rs  parallel_builder.rs  reference.rs
src/parser/: common.rs  java.rs  kotlin.rs  mod.rs
src/proguard/: mod.rs  report_generator.rs  usage.rs
src/refactor/: editor.rs  mod.rs  safe_delete.rs  undo.rs
src/report/: aggregator.rs  colors.rs  compact.rs  grouped.rs  mod.rs  summary.rs  terminal.rs
src/watch/: mod.rs
tests/integration/: advanced_tests.rs  analysis_test.rs  cli_tests.rs  comprehensive_tests.rs  detector_tests.rs  false_positive_tests.rs
(+46 files in other folders)
