[package]
name = "searchdeadcode"
version = "0.4.0"
edition = "2021"
default-run = "searchdeadcode"
rust-version = "1.70"  # MSRV - Minimum Supported Rust Version
authors = ["Kevin"]
description = "A fast CLI tool to detect and remove dead/unused code in Android projects (Kotlin & Java)"
license = "MIT"
repository = "https://github.com/KevinDoremy/SearchDeadCode"
homepage = "https://github.com/KevinDoremy/SearchDeadCode"
documentation = "https://github.com/KevinDoremy/SearchDeadCode#readme"
readme = "README.md"
keywords = ["dead-code", "kotlin", "java", "android", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Parsing
tree-sitter = "0.22"
tree-sitter-kotlin = "0.3.6"
tree-sitter-java = "0.21"

# Graph
petgraph = "0.8"

# File discovery
ignore = "0.4"
walkdir = "2.4"

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# XML parsing
quick-xml = "0.38"

# Regex for resource detection
regex = "1.10"

# Terminal UI
colored = "3.0"
indicatif = "0.18"
console = "0.16"

# Error handling
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
anyhow = "1.0"

# Interactive prompts
dialoguer = "0.12"

# File watching
notify = "8.0"
notify-debouncer-mini = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.8"

[[bench]]
name = "parsing_bench"
harness = false

[[test]]
name = "analysis"
path = "tests/integration/analysis_test.rs"

[[test]]
name = "detectors"
path = "tests/integration/detector_tests.rs"

[[test]]
name = "cli"
path = "tests/integration/cli_tests.rs"

[[test]]
name = "comprehensive"
path = "tests/integration/comprehensive_tests.rs"

[[test]]
name = "false_positives"
path = "tests/integration/false_positive_tests.rs"

[[test]]
name = "advanced"
path = "tests/integration/advanced_tests.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
